# birl_inverse_kinematic

./: CMakeLists.txt  package.xml  setup.py
src/birl_inverse_kinematic/: kdl_ik_solver.py  trac_ik_solver.py
